fix(top-navigation): avoid header wrap (#6106)
* fix(top-navigation): expand only at 1200px or more

* don't break the submenu

* rename mixin and fix language menu

* fix theme switcher

--- a/client/src/ui/molecules/search/index.scss
+++ b/client/src/ui/molecules/search/index.scss
@@ -7,12 +7,13 @@
   .search-widget {
     position: relative;
     width: 100%;
+    margin: 0 auto;
+    max-width: 20rem;
 
     @media screen and (min-width: $screen-md) {
       align-items: center;
       display: flex;
       gap: 0.5rem;
-      margin: 0;
     }
   }
 
@@ -40,7 +41,7 @@
       }
     }
 
-    @media screen and (min-width: $screen-md) {
+    @media screen and (min-width: $screen-lg) {
       &:invalid {
         width: 1rem;
       }
